# fun-sdk

./: CMakeLists.txt  FAQ.md  README.md  version.h.in
gui/: CMakeLists.txt  main.cpp
src/: application.cpp  application.h  global.h  libexport.h
src/face-tracker/: CMakeLists.txt
src/face-tracker/app/: consoleapp.cpp  main.cpp  task.cpp  task.h
src/face-tracker/gui/: main.cpp
src/face-tracker/lib/: CSIROfacetracker.cpp  CSIROfacetracker.h  csirofacetracker.h  facetracker.h  featureextractor.h
src/gui/: CMakeLists.txt  application.cpp  application.h  main.cpp
src/gui/fun-inspector/: CMakeLists.txt  aboutwindow.cpp  aboutwindow.h  customslider.cpp  customslider.h  framewidget.cpp  framewidget.h  landmarkwidget.cpp  landmarkwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mediasynchronizer.cpp  mediasynchronizer.h  playerwindow.cpp  playerwindow.h  session.cpp  session.h  sessionexplorer.cpp  sessionexplorer.h  videowidget.cpp  videowidget.h  videowindow.cpp  videowindow.h  volumebutton.cpp  volumebutton.h
src/gui/fun-inspector/resources/: resources.qrc  resources.rc
src/gui/resources/: resources.qrc
src/libs/common/: CMakeLists.txt  application.cpp  application.h  conversion.cpp  conversion.h  csvfile.cpp  csvfile.h  imageman.cpp  imageman.h  naming.cpp  naming.h
src/libs/face-tracker/: CMakeLists.txt  csirofacetracker.cpp  csirofacetracker.h  facetracker.h  featureextractor.cpp  featureextractor.h
src/libs/face-tracking/: CMakeLists.txt  csirofacetracker.cpp  facetracker.h
src/libs/feature-extraction/: CMakeLists.txt  abstractdata.cpp  abstractdata.h  extractiontask.cpp  extractiontask.h  gaborbank.cpp  gaborbank.h  gabordata.cpp  gabordata.h  gaborextractiontask.cpp  gaborextractiontask.h  gaborkernel.cpp  gaborkernel.h  landmarksdata.cpp  landmarksdata.h  landmarksextractiontask.cpp  landmarksextractiontask.h
src/utils/: CMakeLists.txt  csvfile.cpp  csvfile.h
src/utils/feature-extractor/: CMakeLists.txt  consoleapp.cpp  consoleapp.h  main.cpp  runtimeapp.cpp  runtimeapp.h
src/utils/gabor-extractor/: CMakeLists.txt  gaborapp.cpp  gaborapp.h  main.cpp
src/utils/gabor-test/: CMakeLists.txt  gabortestapp.cpp  gabortestapp.h  main.cpp
src/utils/landmarks-extractor/: CMakeLists.txt  landmarksapp.cpp  landmarksapp.h  main.cpp
